# Checkbox_Test

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
docker/: Dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
migrations/: env.py
migrations/versions/: 12f85798732a_add_app_tables.py  17a36e73e45f_seed_fixv4.py  35e928c3fe4c_seed_fixv5.py  4afe0d625fd8_seed_fix.py  cf81fb0f2d98_seed_fixv2.py  eb0fe0bb4e51_seed_fixv3.py
src/: main.py
src/database/: database_connect.py
src/exceptions/db/: db_exceptions.py
src/middleware/: http_error_handling_middleware.py
src/models/: base.py  check_model.py  user_model.py
src/models/interfaces/: model_interface.py
src/repositories/: check_repository.py  essence_repository.py  prodact_price_repository.py  product_repository.py  sold_product_repository.py  sql_alchemy_repository.py  stock_repository.py  user_repository.py
src/repositories/interface/: abs_repository.py
src/services/auth/: auth.py  auth_http_exceptions.py  auth_router.py  auth_utils.py  get_user_db.py  manager.py
src/services/auth/schemas/: user_auth.py
src/services/checks/: check.py  check_create.py  check_http_exception.py  check_print.py  check_router.py  get_check.py
src/services/checks/schemas/: check_create_query_schema.py  check_get_schema.py  checks_schemas.py  print_schema.py
src/settings/: __init__.py  checkbox_settings.py
src/utils/convert/: number_to_decimal.py
src/utils/default/: default_date.py
src/utils/json/: json_encoder.py
src/utils/link/: create_check_link.py
src/utils/logging/: set_logging.py
src/utils/validators/: decimal_pleaces.py
templates/: check.html
test/: check.py  generate_fake_data_product.py
tests/: conftest.py  insert.sql  insert2.sql  insert_2.sql  test_auth.py  test_check.py
tests/facker/: backup.py
