[tool.poetry]
name = "testtaskcheckbox"
version = "0.1.0"
description = "Test task from Checkbox using FastApi"
authors = ["Zhoholiev Pavlo <zhogolevpv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "1.13.1"
orjson = "^3.10.2"
fastapi-cache2 = { version = "^0.2.1", extras = ["redis"], allow-prereleases = true }
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
gunicorn = "^22.0.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
pydantic = {version = "^2.7.1", extras = ["email"]}
fastapi = "^0.111.0"
joserfc = "^0.9.0"
greenlet = "^3.0.3"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mypy = "^1.10.0"
black = "^24.4.2"
faker = "^25.0.1"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ['venv', 'docker', 'tests', 'migrations', 'alembic', 'alembic.ini', 'alembic/versions', 'alembic/versions/*', 'src/models/*', 'src/repositories/*']

[tool.black]
line-length = 120
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | venv
    | docker
  )/

)
'''

